--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block style-custom
     style.
         body {
-            background-color: #81cfe0;
+            background-color: #eb7654;
         }
 
 block content
