--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -14,27 +14,27 @@ block content
                 .col-sm-3.col-md-2.col-lg-2
                     .row
                         .col-sm-12.col-md-12.col-lg-12
-                            h2.highlight #{results.total}
+                            h2 #{results.total}
                     .row
                         .col-sm-12.col-md-12.col-lg-12
                             h6 TOTAL LISTINGS
                 .col-sm-3.col-md-2.col-lg-2
                     .row
                         .col-sm-12.col-md-12.col-lg-12
-                            h2.highlight !{results.tagsSorted.length}
+                            h2 !{results.tagsSorted.length}
                     .row
                         .col-sm-12.col-md-12.col-lg-12
                             h6 TAG SUGGESTIONS
                 .col-sm-2.col-md-2.col-lg-2
                     .row
                         .col-sm-12.col-md-12.col-lg-12
-                            h2.highlight !{results.viewsDaily}
+                            h2 !{results.viewsDaily}
                     .row
                         .col-sm-12.col-md-12.col-lg-12
                             h6 AVERAGE DAILY VIEWS
         .container-fluid
             .row
-                .col-lg-5.col-lg-offset-1.toggle-results
+                .col-lg-4.col-lg-offset-1.toggle-results
                     div(role='tabpanel')
                         ul.nav.nav-tabs.nav-justified(role='tablist')
                             li.active(role='presentation')
