Consistent single quotes in jade templates

--- a/views/dashboard-tags.jade
+++ b/views/dashboard-tags.jade
@@ -12,7 +12,7 @@
                         a(href='/search?tag=#{tag[0]}') !{tag[0]}
                     .col-lg-12
                         .percent-bar
-                            .fill(style="width: #{tag[1]}%")
+                            .fill(style='width: #{tag[1]}%')
                     .col-lg-12.text-right.percent-text
                         span #{tag[1]}
                         span.small %
