--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,15 +31,15 @@ html
                         span.glyphicon.glyphicon-search
                 ul.nav.navbar-nav.navbar-right
                     li
-                        a(href='#') Help
+                        a(href='') Help
                     li.dropdown
-                        a(href='TODO').dropdown-toggle(data-toggle='dropdown', role='button', aria-expanded='false') About
+                        a(href='#').dropdown-toggle(data-toggle='dropdown', role='button', aria-expanded='false') About
                             span.caret
                         ul.dropdown-menu(role='menu')
                             li
-                                a(href='TODO') Info
+                                a(href='/about') Info
                             li.divider
                             li
-                                a(href='TODO') Contact
+                                a(href='/contact') Contact
 
     block content
