--- a/views/about.jade
+++ b/views/about.jade
@@ -7,11 +7,11 @@ block content
             .col-lg-10.col-lg-offset-1
                 h1 About
     
-                p I'm an Etsy seller and web developer who decided to expand my programming skill set and make life a bit easier by building an app to tackle some of the challenges I've encountered while trying to increase sales and improve my store. We all know how important SEO and keyword relevancy are for our listings, but coming up with great tags and titles is no easy task.
+                p I'm an Etsy seller and web developer who decided to broaden my programming skill set and make life a bit easier by building an app for some of the challenges I've encountered while expanding my store. We all know how important SEO and keyword relevancy are for our listings, but coming up with great tags and titles is no easy task.
 
-                p The Etsy seller community has been an amazing source of advice and ideas. I hope to reciprocate that support by sharing a tool to help others discover new tags and explore what sellers with the most popular products are doing to make their listings so successful. I hope you'll find the tool useful for improving your listings and coming up with innovative directions for your store!
+                p This tool was created to discover new tags and explore what sellers with the most popular products are doing to make their listings so successful. I hope you'll find the tool useful for improving your listings and brainstorming innovatice ideas for your shop!
 
-                p This is only the first version, and I definitely plan to add more features. I'd love to get feedback and ideas, so feel free to e-mail me at laura@uptownhoundboutique.com or convo me through my Etsy shop 
+                p This is only the first version, and I definitely plan to add more features. I want to tailor the tool to the needs of the seller community, so feel free to send feedback and ideas to laura@uptownhoundboutique.com, or convo me through my Etsy shop 
                     a(href='https://www.etsy.com/shop/UptownHoundBoutique', target='_blank') UptownHoundBoutique.
 
                 p Good luck & happy selling!
