--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,7 @@ html
                         span.glyphicon.glyphicon-search
                 ul.nav.navbar-nav.navbar-right
                     li
-                        a(href='') Help
+                        a(href='/help') Help
                     li.dropdown
                         a(href='#').dropdown-toggle(data-toggle='dropdown', role='button', aria-expanded='false') About
                             span.caret
