--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,7 +23,7 @@ a {
     box-shadow: 0 1px 3px rgba(0,0,0,.06);
     height: 60px;
     margin-bottom: 0;
-    padding-top: 6px;
+    padding-top: 5px;
 }
 
 .navbar-default {
@@ -38,16 +38,22 @@ a {
     letter-spacing: 3px;
 }
 
+.navbar-default .navbar-nav>li>a {
+    color: #595959;
+    text-transform: uppercase;
+}
+
 .navbar .search input {
     border-radius: 30px;
+    margin-top: 1px;
     min-width: 230px;
 }
 
 .navbar .search .btn {
     background-color: transparent;
-    color: #999;
+    color: #767676;
     font-size: 16px;
-    margin-left: 4px;
+    margin: 2px 0 0 7px;
     padding: 0;
 }
 
