--- a/views/layout.jade
+++ b/views/layout.jade
@@ -43,3 +43,6 @@ html
                                 a(href='/contact') Contact
 
     block content
+
+    .scroll-top
+        span.glyphicon.glyphicon-circle-arrow-up
