--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -20,6 +20,12 @@ block content
                     .stat-block.text-center
                         span.center-block !{results.viewsDaily}
                         span.center-block.stat-label Average daily views
+    if results.total == 0
+        .container
+            .row
+                .col-lg-10.col-lg-offset-1.no-result
+                    h3.text-center It looks like your tag is one of a kind! Or maybe you made a mistake typing in your search term. Etsy couldn't find any listings using that tag.
+    else
         .container
             .row
                 .col-lg-4.col-lg-offset-1.toggle-results
@@ -29,11 +35,12 @@ block content
                                 a(href='#listings', aria-controls='listings', role='tab', data-toggle='tab') Listings
                             li(role='presentation')
                                 a(href='#tags', aria-controls='tags', role='tab', data-toggle='tab') Tags
-    .container
-        .row
-            .col-lg-10.col-lg-offset-1
-                .tab-content
-                    .tab-pane.active(role='tabpanel', id='listings')
-                        include dashboard-listings
-                    .tab-pane(role='tabpanel', id='tags')
-                        include dashboard-tags                            
+        .container
+            .row
+                .col-lg-10.col-lg-offset-1
+                    .tab-content
+                        .tab-pane.active(role='tabpanel', id='listings')
+                            include dashboard-listings
+                        .tab-pane(role='tabpanel', id='tags')
+                            include dashboard-tags  
+                          
