Add footer with Etsy legal trademark disclaimer

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -44,5 +44,14 @@ html
 
     block content
 
+    .container-fluid#footer
+        .row
+            .container
+                .row
+                    .col-lg-12.text-center &copy; Copyright 2014 Etsy Seller Metrics
+                        br
+                        strong Legal Disclaimer:&nbsp;&nbsp;
+                        | The term 'Etsy' is a trademark of Etsy, Inc. This application uses the Etsy API but is not endorsed or certified by Etsy, Inc.
+
     .scroll-top
         span.glyphicon.glyphicon-circle-arrow-up
